--- a/source/styles/blocks/slider-controls.scss
+++ b/source/styles/blocks/slider-controls.scss
@@ -11,7 +11,6 @@
 .slider-controls__button {
   z-index: 1;
   padding: 0;
-  background-color: tomato;
   position: relative;
   border: none;
   background-color: transparent;
@@ -32,6 +31,10 @@
 
   @media (min-width: $tablet-width) {
     top: 35%;
+  }
+
+  @media (min-width: $desktop-width) {
+    top: 48.5%;
   }
 }
 
