--- a/source/styles/blocks/user-navigation.scss
+++ b/source/styles/blocks/user-navigation.scss
@@ -50,5 +50,6 @@
 
   @media (min-width: $desktop-width) {
     display: inline;
+    max-width: 70px;
   }
 }
