--- a/source/styles/global/global.scss
+++ b/source/styles/global/global.scss
@@ -9,6 +9,7 @@ body {
   display: flex;
   flex-direction: column;
   min-height: 100%;
+  word-wrap: break-word;
 }
 
 //Sticky footer
